flux/apps/base/istio-system/istio/httproutes/authentik.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-route
  namespace: istio-system
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "authentik.kubegit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
        backendRequest: 30s
      backendRefs:
        - name: authentik
          namespace: authentik
          port: 80
