flux/apps/base/istio-system/istio/httproutes/keycloak.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: istio-system
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "keycloak.kubegit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
        backendRequest: 30s
      backendRefs:
        - name: keycloak-service
          namespace: keycloak
          port: 8080
