flux/apps/base/istio-system/istio/httproutes/n8n.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: istio-system
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "n8n.kubegit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Port
                value: "443"
              - name: X-Forwarded-Proto
                value: "https"
      timeouts:
        request: 30s
        backendRequest: 30s
      backendRefs:
        - name: n8n
          namespace: n8n
          port: 5678
