flux/apps/base/istio-system/istio/httproutes/zitadel.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-route
  namespace: istio-system
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "zitadel.kubegit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
        backendRequest: 30s
      backendRefs:
        - name: zitadel
          namespace: zitadel
          port: 8080
